--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "radar.radar"
         minSdkVersion 21
@@ -22,6 +22,7 @@ android {
         sourceCompatibility 1.8
     }
 }
+
 
 
 
