--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserDetailActivity" />
-        <activity
-            android:name=".LaunchActivity">
+        <activity android:name=".LaunchActivity">
             android:theme="@style/Theme.AppCompat.Translucent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,15 +39,16 @@
             </intent-filter>
         </activity>
 
-        <!--Tabbed activity-->
+        <!-- Tabbed activity -->
         <activity android:name=".TabbedSearchActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
         <activity
             android:name=".SearchResultActivity"
             android:screenOrientation="portrait"
@@ -69,11 +69,12 @@
         <activity android:name=".GroupsListActivity" />
         <activity
             android:name=".GroupDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ChatListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NewGroupActivity"></activity>
+        <activity android:name=".NewGroupActivity" />
+        <activity android:name=".EditActivity"></activity>
     </application>
 
 </manifest>
