--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -57,12 +57,14 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
 
-    implementation 'com.google.android.gms:play-services-maps:11.4.0'
-    implementation 'com.google.android.gms:play-services-places:11.4.0'
-    implementation 'com.google.android.gms:play-services-location:11.4.0'
+    implementation 'com.google.android.gms:play-services-maps:11.4.2'
+    implementation 'com.google.android.gms:play-services-places:11.4.2'
+    implementation 'com.google.android.gms:play-services-location:11.4.2'
 
     compile 'com.google.maps:google-maps-services:0.1.20'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.android.support:mediarouter-v7:26.1.0'
+
+    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
 
 }
