--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -19,23 +19,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignupActivity"
-            android:label = "Sign up"/>
+        <activity
+            android:name=".SignupActivity"
+            android:label="Sign up" />
         <activity
             android:name=".HomeScreenActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".FriendsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".UserDetailActivity" />
         <activity
             android:name=".LaunchActivity"
             android:theme="@style/Theme.AppCompat.Translucent">
+
             <!-- ORIGINAL LAUNCHER -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -50,16 +54,6 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-
-        <!--Tabbed activity-->
-        <activity android:name=".TabbedSearchActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-
         <activity
             android:name=".SearchResultActivity"
             android:screenOrientation="portrait"
@@ -71,7 +65,7 @@
 
         <activity
             android:name=".SearchLocationActivity"
-            android:label="radAR Search Location"></activity>
+            android:label="radAR Search Location" />
         <activity
             android:name=".ARActivity"
             android:configChanges="orientation"
@@ -87,9 +81,7 @@
         <activity android:name=".NewGroupActivity" />
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-
-        </activity>
+            android:label="@string/title_activity_maps" />
     </application>
 
 </manifest>
