--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    // Image cropper
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
+
     // Compile GUI
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
