--- a/radAR2/app/build.gradle
+++ b/radAR2/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.1'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'
+
     // Image cropper
     compile 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
 
