--- a/radAR2/app/src/main/AndroidManifest.xml
+++ b/radAR2/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <activity
             android:name=".ChatListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NewGroupActivity" />
+        <activity android:name=".NewGroupActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditProfileActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
